2008-04-27  jtl  <jtl@britten.laudi.ka>

	* src/de/schlund/pfixcore/lucefix/ContextSearch*.java: 
	* src/de/schlund/pfixcore/editor2/frontend/resources/*: removed the resource interfaces,
	only use implementations, also no longer implement ContextResource 
	
2008-04-25  Jens Lautenbacher  <jtl@schlund.de>

	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java: 
	* src/de/schlund/pfixcore/workflow/ContextImpl.java: 
	* src/de/schlund/pfixcore/workflow/Context.java (isPageFlowRunning): renamed from flowIsRunning()
	(getCurrentPageFlow): removed (commented out for now)

	* src/de/schlund/pfixcore/util/StateUtil.java: 
	* src/de/schlund/pfixcore/workflow/app/DefaultIWrapperState.java: renaming as above 
	
2008-04-25  Martin Leidig  <mleidig@schlund.de>

	Removed old authentication mechanism.

	Modified:	
	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java
	* src/de/schlund/pfixcore/workflow/ContextImpl.java
	* src/de/schlund/pfixcore/workflow/State.java
	* src/de/schlund/pfixcore/util/TransformerCallback.java
	* src/de/schlund/pfixcore/webservice/ServiceRuntime.java
	* src/de/schlund/pfixxml/DirectOutputServlet.java
	* src/de/schlund/pfixxml/config/PageRequestConfig.java
	* src/de/schlund/pfixxml/config/impl/ContextXMLServletConfigImpl.java
	* src/de/schlund/pfixxml/config/impl/PageRequestConfigImpl.java
	* projects/core/schema/properties200401.xsd
	* projects/core/xsl/forminput.xsl

	Removed:
	* src/de/schlund/pfixcore/workflow/app/DefaultAuthIWrapperState.java
	* src/de/schlund/pfixxml/config/impl/PagerequestAuxInterfaceRule.java
	* src/de/schlund/pfixxml/config/impl/PagerequestAuthInterfaceRule.java

2008-04-25  Jens Lautenbacher  <jtl@schlund.de>

	* src/de/schlund/pfixcore/workflow/PageFlowContext.java: removed 
	- isForceStopAtNextStep()
	* src/de/schlund/pfixcore/workflow/Context.java: removed 
	- forceStopAtNextStep(boolean)
	- finalPageIsRunning()
	- jumpToPageIsRunning()
	- isCurrentPageRequestInFlow() 